refactor: domain 패키지 코드 품질 개선
- WalletSummaryResponse: null 처리 중복 제거
- EventParticipantService: 공통 로직 헬퍼 메서드 추출
- Stream API를 Java 16+ 방식(.toList())으로 현대화